# Nokia-PK-2025

./: .gitignore
.github/workflows/: ccpp.yml
src/COMMON/Logger/: Logger.cpp
src/COMMON/Messages/: PhoneNumber.cpp
src/UE/: main.cpp
src/UE/Application/: Application.cpp  Application.hpp  CMakeLists.txt  Context.hpp  IEventsHandler.hpp  ISmsDb.hpp  Sms.cpp  Sms.hpp  SmsDb.cpp  SmsDb.hpp
src/UE/Application/Ports/: BtsPort.cpp  BtsPort.hpp  IBtsPort.hpp  ITimerPort.hpp  IUserPort.hpp  TimerPort.cpp  TimerPort.hpp  UserPort.cpp  UserPort.hpp
src/UE/Application/States/: BaseState.cpp  BaseState.hpp  ConnectedState.cpp  ConnectedState.hpp  ConnectingState.cpp  ConnectingState.hpp  NotConnectedState.cpp  NotConnectedState.hpp  SmsComposeState.cpp  SmsComposeState.hpp  SmsListState.cpp  SmsListState.hpp  TalkingState.cpp  TalkingState.hpp  ViewSmsContentState.cpp  ViewSmsContentState.hpp
src/UE/ApplicationEnvironment/: ApplicationEnvironmentFactory.cpp  ApplicationEnvironmentFactory.hpp  IApplicationEnvironment.hpp  ITransport.hpp  IUeGui.hpp
src/UE/ApplicationEnvironment/UeGui/: ICallMode.hpp  IDialMode.hpp  IListViewMode.hpp  ISmsComposeMode.hpp  ITextMode.hpp
src/UE/QtApplicationEnvironment/: ApplicationEnvironment.cpp  ApplicationEnvironment.hpp  ApplicationEnvironmentFactory.cpp
src/UE/QtApplicationEnvironment/GUI/: QtAlertMode.cpp  QtAlertMode.hpp  QtApplication.hpp  QtCallMode.cpp  QtCallMode.hpp  QtDialMode.cpp  QtDialMode.hpp  QtMainWindow.cpp  QtMainWindow.hpp  QtPhoneNumberEdit.cpp  QtPhoneNumberEdit.hpp  QtSelectionListMode.cpp  QtSmsComposeMode.cpp  (+12 more)
(+19 files in other folders)
